// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ContributorForm should render display name field and identifier field 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <div>
    Please 
    <b>
      add to a list of contributors below
    </b>
    , in the format and order that they are published.
  </div>
  <WithStyles(Grid)
    alignItems="baseline"
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      md={5}
      sm={12}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        autoComplete="off"
        disabled={false}
        fullWidth={true}
        id="nameAsPublishedField"
        label="Name as published"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Please type the name exactly as published"
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={5}
      sm={12}
      xs={12}
    >
      <Connect(WithStyles(AutoCompleteAsyncField))
        disabled={true}
        id="identifierField"
        onChange={[Function]}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={2}
      sm={3}
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      >
        Add author
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`Component ContributorForm should render display name field and role field 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <div>
    Please 
    <b>
      add to a list of contributors below
    </b>
    , in the format and order that they are published.
  </div>
  <WithStyles(Grid)
    alignItems="baseline"
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      md={5}
      sm={9}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        autoComplete="off"
        disabled={false}
        fullWidth={true}
        id="nameAsPublishedField"
        label="Name as published"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Please type the name exactly as published"
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={5}
      sm={12}
      xs={12}
    >
      <Connect(WithStyles(AutoCompleteAsyncField))
        autoComplete="off"
        disabled={false}
        error={true}
        floatingLabelText="Creator role"
        fullWidth={true}
        hintText="Role of the creator in relation to the dataset"
        if="creatorRoleField"
        onChange={[Function]}
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={2}
      sm={3}
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      >
        Add author
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`Component ContributorForm should render display name field only 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <div>
    Please 
    <b>
      add to a list of contributors below
    </b>
    , in the format and order that they are published.
  </div>
  <WithStyles(Grid)
    alignItems="baseline"
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      md={10}
      sm={9}
      xs={12}
    >
      <WithStyles(TextFieldWrapper)
        autoComplete="off"
        disabled={false}
        fullWidth={true}
        id="nameAsPublishedField"
        label="Name as published"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Please type the name exactly as published"
        value=""
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={2}
      sm={3}
      xs={12}
    >
      <WithStyles(Button)
        color="primary"
        disabled={true}
        fullWidth={true}
        onClick={[Function]}
        variant="contained"
      >
        Add author
      </WithStyles(Button)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;
